QE-1250: Fix missing padding on all LS6 sides

--- a/themes/admin/Sea_Green/css/sea_green.css
+++ b/themes/admin/Sea_Green/css/sea_green.css
@@ -11361,11 +11361,6 @@ blockquote.float-end {
   padding-right: 12px;
 }
 
-.container-fluid#in_survey_common_action, #in_survey_common_action.container-sm, #in_survey_common_action.container-md, #in_survey_common_action.container-lg, #in_survey_common_action.container-xl, #in_survey_common_action.container-xxl {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .full-page-wrapper {
   position: relative;
   padding-bottom: 65px;
